projects/static/projects/newstyle.css
body{
	font-family: Open Sans, sans-serif;
	background-color: #CCC;
	margin: 0;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}
div#header{
	background-color: #434343;
	height: 40px;
	padding: 10px 10px 10px 10px;
	position: fixed;
	width: 100%;
    top: 0;
	z-index: 999;
}
div#container {
    margin-top: 40px;
}
div#spacer{
	height: 60px;
}
img#logo{
	height: 40px;
}
div#buttons{
	float: right;
	margin: 5px 30px 0 0;
}
div.button{
	display: inline-block;
	padding: 4px 6px 2px 6px;
	border-radius: 10px 10px 10px 0;
	margin-right: 6px;
	background-color: #408ED5;
	cursor: pointer;
	color: #FFF;
}
div.button:hover{
	background-color: #65B4FA;
}
div.button:active{
	background-color: #509EE5;
}
div.button a {
    color: inherit;
    text-decoration: none;
}
input#search{
	width: 100px;
	font-size: inherit;
	line-height: 26px;
	padding: 3px 6px 0px 6px;
	border: solid 1px #fff;
	border-radius: 10px 10px 10px 0;
	margin: 0;
	/* Don't user CSS transition, make this jquery based */
}
div.slider{
	background-color: white;
	background-image: url('/static/projects/MilkyWayWallpaper.jpg');
	background-size: cover;
	background-position: 50% 0;
	padding: 20px 5% 20px 5%;
	position: absolute;
}
div.wordbox{
	display: inline-block;
	max-width: 40%;
	min-width: 420px;
	padding: 10px;
	background-color: rgba(0,0,0,0.6);
	text-align: left;
	color: white;
}
div#welcome h1{
	font-size: 36px;
}
h1{
	font-size: 24px;
	font-weight: bold;
	margin: 4px 0 4px 0;
}
.project_intro{
	height: 400px;
	background-size: cover;
	padding: 20px 5% 20px 5%;
}
.project_details{
	padding: 20px 5% 20px 5%;
	background-color: white;
}
div#footer{
	background-color: #CCC;
	text-align: center;
	padding: 10px;
	color: #333;
	min-height: 200px;
}

